# kandela

./: .gitignore  README.md
backend/: core.py  main.py  models.py  openapi.json  pyproject.toml  railway.json  similarity.py
backend/api/: routes.py
backend/app/: config.py  core.py  dependencies.py  main.py  models.py
backend/data/: model.kv  model.py  vocab.py  vocabulary.txt
backend/scripts/: .gitignore  model.kv  model.py  test.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  worker-configuration.d.ts  wrangler.jsonc
frontend/api/: index.ts  sdk.gen.ts  types.gen.ts
frontend/src/: App.tsx  index.css
frontend/worker/: index.ts
