[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.136.0",
    "gensim>=4.4.0",
    "pydantic-settings>=2.13.1",
]

[dependency-groups]
dev = [
    "ruff>=0.15.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.fastapi]
entrypoint = "app.main:app"
